# fractalesClion

./: CMakeLists.txt
project_2018_template/: CMakeLists.txt  Makefile  main.c
project_2018_template/libfractal/: fractal.c  fractal.h  tools.c
